Add fixes to enable UI tests on CI